--- a/style.css
+++ b/style.css
@@ -1,1 +1,29 @@
-angularApp
+/* Put your css in here */
+
+
+.loginBtn {
+  color: blue;
+  margin:20px 0px 0px 100px;
+  width:100px;
+  height:30px;
+}
+.inputfield {
+  margin:0px 0px 20px 20px;
+  padding:4px;
+  width:200px;
+}
+.login {
+  background:yellow;
+  padding:20px;
+  width:400px;
+  border-radius:20px;
+}
+.infinitegrid {
+  height:400px;
+  overflow:auto;
+}
+table th,td {
+  width:100px;  
+  text-align:left;
+  
+}
